Images placeholders loadings and new/popular sorting

--- a/imgur/imgur/App.xaml
+++ b/imgur/imgur/App.xaml
@@ -12,6 +12,7 @@
         <converters:SizeConverter x:Key="SizeConverter"/>
         <SolidColorBrush x:Key="WhiteColor" Color="White"/>
         <SolidColorBrush x:Key="GrayColor" Color="#FF747A84"/>
+        <SolidColorBrush x:Key="ImgurGreen" Color="#FF85BF25"/>
     </Application.Resources>
 
 </Application>
