--- a/imgur/imgur/View/ChatsView.xaml
+++ b/imgur/imgur/View/ChatsView.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
     <Page.Transitions>
         <TransitionCollection>
-            <EdgeUIThemeTransition Edge="Left" />
+            <PopupThemeTransition />
         </TransitionCollection>
     </Page.Transitions>
 
