--- a/imgur/imgur/App.xaml
+++ b/imgur/imgur/App.xaml
@@ -10,6 +10,7 @@
     <Application.Resources>
         <viewModels:ViewModelLocator x:Key="viewModelLocator"/>
         <converters:SizeConverter x:Key="SizeConverter"/>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <SolidColorBrush x:Key="WhiteColor" Color="White"/>
         <SolidColorBrush x:Key="GrayColor" Color="#FF747A84"/>
         <SolidColorBrush x:Key="ImgurGreen" Color="#FF85BF25"/>
